# python-rpn

./: .gitignore  .gitmodules  .name  .setenv-pgi1401.dot  .setenv-pgi9xx.dot  .setenv-withdeps.dot  .setenv.defaults.dot  .setenv.defaults.dot-cmc  .setenv.defaults.dot-science  .setenv.dot  .setenv.dot-pgi13  .setenv.gpsc-in.dot  .setenv_xlf13.dot  DEPENDENCIES  DEPENDENCIES.external.cmc.bndl  DEPENDENCIES.external.cmc.bndl-u14  DEPENDENCIES.external.cmc.bndl-u18  DEPENDENCIES.external.science.bndl  DEPENDENCIES.mig.bndl  DESCRIPTION  Fstd.py  Fstdc.c  KnownIssues  LICENSE  MANIFEST.in  Makefile  Makefile.base.mk  Makefile.config.mk  Makefile.rules.mk  Makefile.subdir.mk  Makefile.user.mk  Makefile.user.root.mk  Makefile_AIX  Makefile_Linux_pgi611.mk  Makefile_Linux_pgi9xx.mk  Makefile_Linux_sun12  Makefile_Linux_x86-64.mk  Makefile_Linux_x86-64_intel13sp1.mk  Makefile_Linux_x86-64_pgi1301.mk  Makefile_Linux_x86-64_pgi9xx.mk  (+39 more)
.ssm.d/: control  exclude  post-install  r.pkg-config
Linux_x86-64/: Makefile.inc.mk
__adw_4D/: adx_cubicpos_tl.ftn90  adx_exch_1_tl.ftn90  adx_exch_1_tr.ftn90  adx_grid_uv_ad.ftn90  adx_interp_gmm_tl.ftn90  adx_lag3d_tricub_tl.ftn90  adx_main_3_intlag_ad.ftn90  adx_polx_ad.ftn90  adx_setint_1_tr.ftn90  adx_setint_ad.ftn90  adx_setint_noptr_1_tr.ftn90  adx_setint_noptr_ad.ftn90  adx_setint_noptr_tl.ftn90  adx_setint_tl.ftn90  adx_trajex_tl.ftn90  adx_trajsp_tl.ftn90  adx_trilin_opt_1_tr.ftn90  adx_trilin_opt_tl.ftn90  adx_trilin_tl.ftn90
__base_4D/: bac_ad.ftn90  bac_tl.ftn90  bacp_ad.ftn90  bacp_tl.ftn90  blend_pntr_ad.ftn90  diag_var_ad.ftn90  (+78 more)
(+6477 files in other folders)
