# Prevent the package from being installed as a 'purelib', since it contains
# platform-specific shared libraries.
# https://github.com/pypa/auditwheel/pull/28#issuecomment-212082647
[install]
install_lib = .

# Include the license file in all binary distributions.
[metadata]
license_file = LICENSE
